# OutLoud

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  app.py  buildbuddy.yaml  cleaner.py  cli.py  config.py  db.py  e2e_test.py  espeak.lock.json  extractor.py  gazelle_python.yaml  requirements.txt  tts.py  worker.py
.github/workflows/: ci.yml
outloud/: BUILD.bazel
outloud/cleaner/: BUILD.bazel  __init__.py  cleaner.py  cleaner_test.py
outloud/config/: BUILD.bazel  __init__.py  config.py  config_test.py  logging.py
outloud/db/: BUILD.bazel  __init__.py  db.py  db_test.py
outloud/extractor/: BUILD.bazel  __init__.py  extractor.py  extractor_test.py
outloud/tts/: BUILD.bazel  __init__.py  debug_test.py  tts.py  tts_test.py
outloud/worker/: BUILD.bazel  __init__.py  worker.py
static/: app.js  style.css
templates/: index.html
