module(
    name = "outloud",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_linux_packages", version = "0.2.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.lock",
    extra_pip_args = ["--index-url=https://pypi.org/simple/"],
    experimental_requirement_cycles = {
        "lxml": ["lxml", "lxml-html-clean"],
    },
)
use_repo(pip, "pypi")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "kokoro_model",
    url = "https://github.com/thewh1teagle/kokoro-onnx/releases/download/model-files-v1.0/kokoro-v1.0.onnx",
    sha256 = "7d5df8ecf7d4b1878015a32686053fd0eebe2bc377234608764cc0ef3636a6c5",
    downloaded_file_path = "kokoro-v1.0.onnx",
)

http_file(
    name = "kokoro_voices",
    url = "https://github.com/thewh1teagle/kokoro-onnx/releases/download/model-files-v1.0/voices-v1.0.bin",
    sha256 = "bca610b8308e8d99f32e6fe4197e7ec01679264efed0cac9140fe9c29f1fbf7d",
    downloaded_file_path = "voices-v1.0.bin",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ruff_linux_x86_64",
    url = "https://github.com/astral-sh/ruff/releases/download/0.14.10/ruff-x86_64-unknown-linux-gnu.tar.gz",
    sha256 = "4695e6375b1fa2b9c5f839218d695d8e701cfccb15d3f622b6a6feedb086bffb",
    strip_prefix = "ruff-x86_64-unknown-linux-gnu",
    build_file_content = 'exports_files(["ruff"])',
)

http_archive(
    name = "ruff_macos_aarch64",
    url = "https://github.com/astral-sh/ruff/releases/download/0.14.10/ruff-aarch64-apple-darwin.tar.gz",
    sha256 = "dd0f3ec914604d802658ae0d271ff9d767c117d1702a44222170dd2ffbad8d2c",
    strip_prefix = "ruff-aarch64-apple-darwin",
    build_file_content = 'exports_files(["ruff"])',
)

apt = use_extension("@bazel_linux_packages//apt:extensions.bzl", "apt")
apt.debian(
    name = "espeak_ng",
    lockfile = "//:espeak.lock.json",
    packages = ["libespeak-ng1", "espeak-ng-data", "libpcaudio0", "libsonic0"],
    suites = ["bookworm"],
)
use_repo(apt, "espeak_ng")
