load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "config",
    srcs = [
        "__init__.py",
        "config.py",
        "logging.py",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "config_test",
    srcs = ["config_test.py"],
    args = ["-v"],
    deps = [
        ":config",
        "@pypi//pytest",
    ],
)
