load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "tts",
    srcs = [
        "__init__.py",
        "tts.py",
    ],
    data = ["//:espeak_data"],
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//kokoro_onnx",
        "@pypi//misaki",
        "@pypi//numpy",
        "@pypi//onnxruntime",
        "@pypi//pydub",
        "@pypi//soundfile",
        "@rules_python//python/runfiles",
    ],
)

py_test(
    name = "tts_test",
    srcs = ["tts_test.py"],
    args = ["-v"],
    data = ["//:model_files"],
    deps = [
        ":tts",
        "@pypi//pytest",
    ],
)

py_test(
    name = "debug_test",
    srcs = ["debug_test.py"],
    args = ["-v"],
    data = [
        "@kokoro_model//file",
        "@kokoro_model_timestamped//file",
    ],
    deps = [
        "@pypi//onnxruntime",
        "@pypi//pytest",
        "@rules_python//python/runfiles",
    ],
)
