load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "worker",
    srcs = [
        "__init__.py",
        "worker.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//outloud/cleaner",
        "//outloud/config",
        "//outloud/db",
        "//outloud/extractor",
        "//outloud/tts",
        "@pypi//requests",
    ],
)
